data/derived/fa15/progs/unify/prog1710.ml.out
Characters 81-83:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type 'a but an expression was expected of type
         ('a -> 'b -> 'b) list
       The type variable 'a occurs inside ('a -> 'b -> 'b) list
